--- a/css/src/components/_meta.scss
+++ b/css/src/components/_meta.scss
@@ -1,14 +1,22 @@
 .meta {
-    text-align: right;
     display: flex;
     flex-direction: column;
+    margin-bottom: var(--gap);
+
+    @media (min-width: 920px) {
+        text-align: right;
+    }
 }
 .meta__title {
     order: 1;
     margin: 0;
     font-size: 2.4rem;
-    margin-bottom: calc(var(--gap) * 2);
+    margin-bottom: var(--gap-smaller);
     line-height: 1.2;
+
+    @media (min-width: 920px) {
+        margin-bottom: calc(var(--gap) * 2);
+    }
 }
 
 .meta__category {
@@ -18,7 +26,9 @@
     color: var(--grey);
     font-weight: var(--fw-light);
     line-height: 1.2;
-    margin-bottom: calc(var(--gap) * .5);
+    @media (min-width: 920px) {
+        margin-bottom: calc(var(--gap) * .5);
+    }
 }
 
 .meta__job {
